[MODEXPW-528] Generate EDI file for claims